[package]
name = "nucleo"
description = "plug and play high performance fuzzy matcher"
authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
version = "0.4.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/nucleo"
readme = "README.md"
exclude = ["/typos.toml", "/tarpaulin.toml"]

[lib]
name = "nucleo"
path = "src/lib.rs"

[[bin]]
name = "ncl"
path = "src/bin/main.rs"

[dependencies]
nucleo-matcher = { version = "0.3.1", path = "matcher" }
parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"]}
rayon = "1.7.0"
nix = "0.25.0"
clap = { version = "3.2.22", optional = true, features = ["cargo"] }
atty = { version = "0.2.14", optional = true }
shlex = { version = "1.1.0", optional = true }
env_logger = { version = "0.9.0", optional = true }
regex = "1.6.0"
lazy_static = "1.4.0"
unicode-width = "0.1.9"
log = "0.4.17"
time = "0.3.13"
tuikit = "0.5.0"
vte = "0.11.0"
derive_builder = "0.11.2"
bitflags = "1.3.2"
timer = "0.2.0"
chrono = "0.4.22"
crossbeam = "0.8.2"
beef = "0.5.2" # compact cow
defer-drop = "1.3.0"

[workspace]
members = [ "matcher", "bench" ]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]
